[metadata]
name = nml-ui
version = 0.0.1
author_email = sanjay.ankur@gmail.com
author = libNeuroML authors and contributors
description = App for working with NeuroML models
long_description = file: README.rst
long_description_content_type=text/rst
url = https://docs.neuroml.org
license = BSD-2-Clause
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering

[options]
install_requires =
    libNeuroML
    pyNeuroML

packages = find:

[options.packages.find]
where = .
include = nmlui*
exclude = nmlui.test*

[options.extras_require]
test =
    pytest

dev =
    wheel
    pytest
    ruff
    pre-commit
    flake8


full =
    libNeuroML[test]
    libNeuroML[dev]

[flake8]
# ignore:
# spacing around operators, comment blocks, in argument lists
# lines too long
ignore = E501,E502,F403,F405,E231,E228,E225,E226,E265,E261
exclude =
    build

[mypy]
ignore_missing_imports = True
follow_imports = silent
exclude = (nml\.py|doc/|build/|helper_methods\.py|generateds_config\.py|examples/)
